@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2001-2003  Donald N. Allingham
+# Copyright (C) 2001-2004  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -486,9 +486,11 @@ class PedigreeView:
         back_sensitivity = self.parent.hindex > 0 
         fwd_sensitivity = self.parent.hindex + 1 < len(self.parent.history)
         entries = [
-            ('gtk-go-back',self.parent.back_clicked,back_sensitivity),
-            ('gtk-go-forward',self.parent.fwd_clicked,fwd_sensitivity),
-            ('gtk-home',self.parent.on_home_clicked,1),
+            (gtk.STOCK_GO_BACK,self.parent.back_clicked,back_sensitivity),
+            (gtk.STOCK_GO_FORWARD,self.parent.fwd_clicked,fwd_sensitivity),
+            #FIXME: revert to stock item when German gtk translation is fixed
+	    #(gtk.STOCK_HOME,self.parent.on_home_clicked,1),
+            (_("Home"),self.parent.on_home_clicked,1),
             (None,None,0),
             (_("Set anchor"),self.on_anchor_set,1),
             (_("Remove anchor"),self.on_anchor_removed,1),
@@ -497,6 +499,11 @@ class PedigreeView:
         menu.set_title(_('People Menu'))
         for stock_id,callback,sensitivity in entries:
             item = gtk.ImageMenuItem(stock_id)
+            #FIXME: remove when German gtk translation is fixed
+	    if stock_id == _("Home"):
+	    	im = gtk.image_new_from_stock(gtk.STOCK_HOME,gtk.ICON_SIZE_MENU)
+	    	im.show()
+		item.set_image(im)
             if callback:
                 item.connect("activate",callback)
             item.set_sensitive(sensitivity)
